--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -24,6 +24,34 @@ li {
     padding: 5px;
 }
 
+/* Grid Styling */
+.grid-container {
+    display: grid;
+    grid-template-columns: 75% 25%;
+    grid-template-rows: 15% 60% 25%;
+}
+
+.header-item {
+    grid-row: 1/2;
+    grid-column: 1/2;
+}
+
+.para-item1 {
+    grid-row: 2/3;
+    grid-column: 1/2;
+}
+
+.para-item2 {
+    grid-row: 3/4;
+    grid-column: 1/2;
+}
+
+.img-item {
+    grid-row: 2/3;
+    grid-column: 2/3;
+    
+}
+
 /* Footer styling */
 footer {
     background-color: #a6cad4;
