--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -2,7 +2,7 @@ body {
     background-color: #EDDDD0;
 }
 
-/* Header styling */
+/* Header/nav styling */
 h1 {
     /* Changed the font of all h1 elements to match*/
     font-family: "Montserrat", sans-serif;
@@ -24,32 +24,32 @@ li {
     padding: 5px;
 }
 
+a:hover {
+    color: #db504a;
+}
+
 /* Grid Styling */
 .grid-container {
     display: grid;
     grid-template-columns: 75% 25%;
-    grid-template-rows: 15% 60% 25%;
+    grid-template-rows: 70px 250px 125px;
 }
 
 .header-item {
     grid-row: 1/2;
-    grid-column: 1/2;
+    grid-column: 1/3;
 }
 
 .para-item1 {
     grid-row: 2/3;
-    grid-column: 1/2;
 }
 
 .para-item2 {
     grid-row: 3/4;
-    grid-column: 1/2;
 }
 
 .img-item {
-    grid-row: 2/3;
     grid-column: 2/3;
-    
 }
 
 /* Footer styling */
