--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -14,9 +14,23 @@ header {
     text-align: center;
 }
 
+/* Courses Styling */
+.course-card1 {
+    border-bottom: 2px solid black;
+}
+
+.course-card2 {
+    border-bottom: 2px solid black;
+    margin-top: 5px;
+}
+
+.course-card3 {
+    margin-top: 5px;
+}
+
+/* List styling */
 .list-style {
     list-style: none;
-    display: flex;
     justify-content: center;
 }
 
@@ -60,6 +74,72 @@ footer {
 
 @media screen and (min-width: 600px) {
     body {
+        background-color: #EDDDD0;
+    }
+
+    /* Header/nav styling */
+    h1 {
+        /* Changed the font of all h1 elements to match*/
+        font-family: "Montserrat", sans-serif;
+        color: #334259;
+    }
+
+    header {
+        background-color: #a6cad4;
+        text-align: center;
+    }
+
+    .list-style {
+        list-style: none;
         display: flex;
+        justify-content: center;
+    }
+
+    li {
+        padding: 5px;
+    }
+
+    a:hover {
+        color: #db504a;
+    }
+
+    .grid-container2 {
+        display: grid;
+        grid-template-columns: 1fr 3fr;
+        grid-template-rows: 0.5fr 0.5fr 0.5fr;
+    }
+
+    .semester {
+        grid-row: 3/4;
+    }
+
+    /* Grid Styling */
+    .grid-container {
+        display: grid;
+        grid-template-columns: 75% 25%;
+        grid-template-rows: 70px 250px 125px;
+    }
+
+    .header-item {
+        grid-row: 1/2;
+        grid-column: 1/3;
+    }
+
+    .para-item1 {
+        grid-row: 2/3;
+    }
+
+    .para-item2 {
+        grid-row: 3/4;
+    }
+
+    .img-item {
+        grid-column: 2/3;
+    }
+
+    /* Footer styling */
+    footer {
+        background-color: #a6cad4;
+        text-align: center;
     }
 }
