--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -15,12 +15,13 @@ header {
 }
 
 /* Course card Styling */
+
 .course-card1 {
-    border-bottom: 2px solid black;
+    border-bottom: 2px solid ghostwhite;
 }
 
 .course-card2 {
-    border-bottom: 2px solid black;
+    border-bottom: 2px solid ghostwhite;
     margin-top: 5px;
 }
 
@@ -77,24 +78,19 @@ footer {
         display: flex;
     }
 
-    /* Course card Styling */
-    .course-card1 {
-        border-bottom: 2px solid grey;
-    }
-
-    .course-card2 {
-        border-bottom: 2px solid grey;
-        margin-top: 5px;
-    }
-
-    .course-card3 {
-        margin-top: 5px;
-    }
-
-    .course-grid-container {
+    .course-card-container {
         display: grid;
         grid-template-columns: 1fr 3fr;
         grid-template-rows: 0.5fr 0.5fr;
+    }
+
+    .course-card1 {
+        border-bottom: 2px solid black;
+    }
+    
+    .course-card2 {
+        border-bottom: 2px solid black;
+        margin-top: 5px;
     }
 
     .semester {
